src/objects/TR1__RateLimit__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Error_To_Display__c</fullName>
        <label>Error To Display</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Limit__c</fullName>
        <label>Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate</label>
        <referenceTo>TR1__Rate__c</referenceTo>
        <relationshipLabel>Rate Limits</relationshipLabel>
        <relationshipName>Rate_Limits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per Day</fullName>
                </value>
                <value>
                    <fullName>Per Calendar Week</fullName>
                </value>
                <value>
                    <fullName>Per Calendar Month</fullName>
                </value>
                <value>
                    <fullName>Per Calendar Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Rate Limit</label>
    <nameField>
        <label>Rate Limit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>